--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
     <!--Let browser know website is optimized for mobile-->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
 
+    <!-- Link to fonts -->
+    <link rel="stylesheet" href="./font.css">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
