--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
 
     <!-- Link to fonts -->
-    <link rel="stylesheet" href="./font.css">
+    <link rel="stylesheet" href="./fonts/style.css">
 
   </head>
   <body>
